--- a/task.css
+++ b/task.css
@@ -7,7 +7,7 @@ div.box{
 	float:left;
 	width:30%;
 	padding-top:30%;
-	margin:1% 1%;
+	margin:1% 1% 1% 2%;
 	background:yellow;
 	border-radius: 10%
 }
