--- a/task.css
+++ b/task.css
@@ -1,13 +1,12 @@
 body{
 	margin:0;
 	padding:0;
-	width:100%;
 }
 div.box{
 	float:left;
 	width:30%;
 	padding-top:30%;
 	margin:1% 1% 1% 2%;
-	background:yellow;
+	background:orange;
 	border-radius: 10%
 }
