--- a/task3/task3.css
+++ b/task3/task3.css
@@ -1,18 +1,30 @@
 body{
     background-color: #68cdd5;
     color:white;
+    padding:0;
+    margin:0;
+}
+div.back{
+    padding:1% 0 0 1%;
 }
 div.title{
-    margin:5% auto;
+    margin:0 auto;
     text-align:center;
     font-size:1.4em;
-    padding:0 8% 10% 8%;
+}
+.title p{
+    padding:5% 10% 10% 10%;
+    text-align:left;
+    line-height:1.6em;
+    letter-spacing:0.1em;
 }
 div.left{
     float:left;
     margin-left:15%;
+    margin-top:8%;
 }
 div.right{
     margin-right:15%;
     float:right;
+    margin-top:8%;
 }
