--- a/task4/task4.css
+++ b/task4/task4.css
@@ -3,48 +3,50 @@
     padding:0;
 }
 body{
-    background: #eff0f4;
-    width:100%;
-    overflow:hidden;
+    background:#eff0f4;
 }
 header{
-    background-color: #5fc0cd;
+    width:100%;
+    background-color:#5fc0cd;
     color:white;
     text-align:center;
-    font-size:1.4rem;
-    padding:1.5rem 0;
+    font-size:1.5rem;
+    padding:1rem 0;
 }
 span.left {
     float: left;
-    padding:0.2rem 0 0 2%;
-}
-.middle{
-    font-size:1.6rem;
+    font-size:1.3rem;
+    padding:0.1rem 0 0 1.5rem;
 }
 .right{
     float:right;
-    padding:0.2rem 2% 0 0;
+    font-size:1.3rem;
+    padding:0.1rem 1.5rem 0 0;
 }
 table{
-    width:100%;
-    border-width:2rem;
-    margin:0.5rem 0;
+    width: 100%;
+    border:0;
+    margin:0.2rem 0;
     border-spacing:0 0.5rem;
+    clear:both;
 }
 td{
     background-color: white;
+    overflow:hidden;
 }
 .photo{
-    width:5rem;
-    height:5rem;
+    width:4rem;
+    text-align:center;
 }
 img{
-    margin:1rem;
+    width:2rem;
+    height:2rem;
+    padding:1rem 0 0.6rem 0;
 }
 input{
-    font-size:1.6rem;
-    height:48px;
-    width:95%;
+    font-size:1.2rem;
+    width:70%;
+    height:2rem;
     border-width:0 0 0 0.1rem;
     border-color:#eff0f4;
     border-left-style:solid;
@@ -52,19 +54,19 @@ input{
 }
 ::-webkit-input-placeholder {
     color:#eff0f4;
-    font-size:1.6rem;
+    font-size:1.2rem;
 }
 :-moz-placeholder {
     color:#eff0f4;
-    font-size:1.6rem;
+    font-size:1.2rem;
 }
 ::-moz-placeholder {
     color:#eff0f4;
-    font-size:1.6rem;
+    font-size:1.2rem;
 }
 :-ms-input-placeholder {
     color:#eff0f4;
-    font-size:1.6rem;
+    font-size:1.2rem;
 }
 button{
     width:100%;
@@ -72,13 +74,13 @@ button{
     color:white;
     text-align:center;
     border:0;
-    font-size:2rem;
-    margin: 2rem 0;
-    padding:1.5rem 0;
+    font-size:1.5rem;
+    margin:1.5rem 0 0.5rem 0;
+    padding:1rem 0;
 }
 footer{
     color:#5fc0cd;
-    font-size:1.5em;
+    font-size:1.2rem;
     text-align:right;
-    padding:0 3%;
+    padding:0 1rem;
 }
