布局修改，滚动条修正。
Signed-off-by: Galu <sky_ctl@hotmail.com>

--- a/task5/task5.css
+++ b/task5/task5.css
@@ -2,13 +2,16 @@
     margin:0;
     padding:0;
 }
+body{
+    padding-bottom:4rem;
+}
 header{
     background-color:#5fc0cd;
     color:white;
     width:100%;
-    font-size:1.3rem;
+    font-size:1.1rem;
     text-align:center;
-    padding:0.8rem 0;
+    padding:0.5rem 0;
 }
 .back{
     position:absolute;
@@ -18,31 +21,31 @@ header{
 div.main{
     width:100%;
     position:relative;
-    overflow:scroll;    /*滚动条出现位置*/
-    padding-bottom:4rem;
+    overflow:auto;
 }
 .profile{
     background-image:url(images/backgroud.png);
     background-size:100% 100%;
-    height:6rem;
+    height:7rem;
     padding:1.5rem;
     color:white;
     font-size:1rem;
     line-height:2rem;
-    overflow:hidden;
+    display:flex;
+    display:-webkit-flex;
+    align-items: center;
 }
 .head{
-    float:left;
+    flex:none;
 }
 .head img{
     width:5rem;
     height:5rem;
 }
 .info{
-    float:left;
+    margin-left:1.5rem;
     height:4rem;
-    margin:1rem 0 0 7rem;
-    position:fixed;
+    flex:auto;
 }
 p.local{
     font-size:0.8rem;
@@ -53,9 +56,8 @@ p.local{
 }
 
 .skill{
-    font-size:1rem;
-    font-weight:bold;
-    margin:1rem 0 1rem 2rem;
+    font-size:1.1rem;
+    margin:1rem 0 1rem 1rem;
     padding-left:0.4rem;
     border-left:3px solid #5fc0cd;
 }
@@ -67,32 +69,36 @@ hr{
     clear:both;
 }
 ul{
-    margin:0 0 0 1.5rem;
+    margin:0 0 0 1rem;
     list-style-type:none;
     line-height:3rem;
+    font-size:1rem;
+    color:gray;
 }
 li{
     border-bottom: 1px solid #eff0f4;
 }
 li:last-child{
-    border-bottom:none;
+    display:flex;
+    display:-webkit-flex;
+    align-items:center;
 }
 li p>span{
     background-image:url(images/star.png);
     background-repeat:no-repeat;
-    background-size:1rem 1rem;
+    background-size:0.9rem 0.9rem;
     background-position:left;
     font-size:1rem;
-    padding-left:1rem;
-    margin-left:0.5rem;
+    padding-left:1.2rem;
+    margin-left:0.8rem;
 }
 li p span:first-child{
     border-right:1px solid #eff0f4;
-    padding-right:0.5rem;
+    padding-right:0.8rem;
 }
 .label{
     color:#999999;
-    padding-right:1rem;
+    padding:0 1rem 0 0.5rem;
     border-right:1px solid #eff0f4;
 }
 .detail{
@@ -102,11 +108,18 @@ li p span:first-child{
     color:red;
     padding-left:1rem;
 }
+.self{
+    color:#999999;
+    padding:0 1rem 0 0.5rem;
+    border-right:1px solid #eff0f4;
+    flex:none;
+}
 .intro{
     font-size:0.9rem;
-    padding:1rem 2rem 0 1rem;
-    line-height:1.5rem;
-    position:absolute;
+    line-height:1.2rem;
+    padding:0.2rem 2rem 0.2rem 1rem;
+    flex:auto;
+    vertical-align:middle;
 }
 footer{
     width:100%;
@@ -114,6 +127,7 @@ footer{
     position:fixed;
     bottom:0;
     left:0;
+    background-color: white;
 }
 .message{
     float:left;
