--- a/task6/task6.css
+++ b/task6/task6.css
@@ -137,38 +137,46 @@ ul p{
 }
 footer{
     width:100%;
-    height:6.5rem;
     background-color:#f8fafb;
     position:fixed;
     bottom:0;
     left:0;
     z-index:-1;
     text-align:center;
-    display:flex;
-    display:-webkit-flex;
-    justify-content:space-around;
-    align-items:baseline;
     border-top:1px solid #d0d0d0;
-
 }
 .img1{
-    background: url(sprite.png) -0px -96px no-repeat;
-    height: 96px;
-    width: 96px;
-    transform:scale(0.5,0.5);
+    background: url(sprite.png) -24px -96px no-repeat;
+    height: 48px;
+    width: 48px;
+    float:left;
     display:inline-block;
+    padding-top:4.2rem;
+    margin-left:4rem;
+    vertical-align: middle;
+    font-size:1.4rem;
+    color:#29bde0;
+    transform:scale(0.8,0.8);
+
 }
 .img2{
-    background: url(sprite.png) -0px -0px no-repeat;
-    height: 96px;
-    width: 96px;
-    transform:scale(0.5,0.5);
+    background: url(sprite.png) -13px -13px no-repeat;
+    height:70px;
+    width: 70px;
+    border-radius:50%;
     display:inline-block;
+    vertical-align: middle;
 }
 .img3{
-    background: url(sprite.png) -96px -0px no-repeat;
-    height: 96px;
-    width: 96px;
-    transform:scale(0.5,0.5);
+    background: url(sprite.png) -120px -0px no-repeat;
+    height: 48px;
+    width: 48px;
     display:inline-block;
+    float:right;
+    padding-top:4.2rem;
+    margin-right:4rem;
+    vertical-align: middle;
+    font-size:1.4rem;
+    color:#d0d0d0;
+    transform:scale(0.8,0.8);
 }
